# OSN-Algoritmus-MS

./: .gitignore  README.md  main.py  pyproject.toml
Prilohy/: p12_V_deti.csv  p13_V_dospeli.csv  p14_D_deti.csv  p15_D_dospeli.csv  p16_vybrane_ochorenia.csv  p1_programovy_profil.csv  p2_zoznam_ms.csv  p3_specialne_podmienky.txt  p5_signifikantne_OP.csv  p7_VV_deti.csv  p7_vedlajsie_vykony.csv  p8_VV_dospeli.csv  p8_vedlajsie_vykony.csv  p9_VD_deti.csv  p9_VD_dospeli.csv
prilohy_excel/: 01_Programovy profil.xlsx  02_Zoznam-medicinskych-sluzieb.xlsx  05_Sposob urcenia medicinskej sluzby pre novorodencov_NOV.xlsx  06_Sposob urcenia medicinskej sluzby podla skupiny klasifikacneho systemu a diagnozy_DRGD.xlsx  07_Sposob urcenia medicinskej sluzby podla hlavneho ZV a zdravotneho vykonu pre deti_VV.xlsx  07a_Sposob urcenia medicinskej sluzby podla markera a zdravotneho vykonu pre deti MV.xlsx  08_Sposob urcenia medicinskej sluzby podla hlavneho ZV a ZV pre dospelych VV.xlsx  08a_Sposob urcenia medicinskej sluzby podla markera a ZV pre dospelych MV.xlsx  09_Sposob urcenie medicinskej sluzby podla hlavneho vykonu a diagnozy_VD.xlsx  09a_Sposob urcenie medicinskej sluzby podla markeru a diagnozy_MD.xlsx  10_Sposob urcenia medicinskej sluzby podla hlavnej a vedlajsej diagnozy_DD.xlsx  12_Sposob urcenia medicinskej sluzby podla hlavneho vykonu pre deti_V.xlsx  13_Sposob urcenia medicinskej sluzby podla hlavneho vykonu pre dospelych_V.xlsx  14_Sposob urcenia medicinskej sluzby podla hlavnej diagnozy pre deti_D.xlsx  15_Sposob urcenia medicinskej sluzby podla hlavnej diagnozy pre dospelych_D.xlsx  16_Sposob urcenia medicinskej sluzby podla specialnych pravidiel_S.xlsx  17_Sposob urcenia medicinskej sluzby pre program 98.xlsx
src/OSN_Algoritmus/: __main__.py  _pomocne_funkcie.py  core.py  input_preparation.py  models.py  prilohy_evaluation.py  prilohy_preparation.py  priprava_dat.py  priprava_priloh.py  utils.py  vyhodnotenie_priloh.py
src/OSN_Algoritmus/Prilohy/: p12_V_deti.csv  p13_V_dospeli.csv  p14_D_deti.csv  p16_opuch_mozgu.csv  p2_zoznam_ms.csv  p3_specialne_podmienky.txt  p6_DRGD_dospeli.csv  p7_VV_deti_hv.csv  p8_vedlajsie_vykony.csv  p9_VD_deti.csv
src/osn_algoritmus/: __init__.py  __main__.py  core.py  input_preparation.py  models.py  prilohy_evaluation.py  prilohy_preparation.py  utils.py
src/osn_algoritmus/Prilohy/: p10_DD.csv  p10_DD_deti.csv  p10_DD_diagnozy.csv  p10_DD_dospeli.csv  p13_V_dospeli.csv  p15_D_dospeli.csv  p16_koma.csv  p17_M.csv  p1_programovy_profil.csv  p3_specialne_podmienky.txt  p5_NOV.csv  p6_DRGD_deti.csv  p7_VV_deti_vv.csv  p7a_MV_deti.csv  p8_VV_dospeli_hv.csv  p8_VV_dospeli_vv.csv  p8a_MV_dospeli.csv  p9_VD_diagnozy.csv  p9_VD_dospeli.csv  p9a_MD_dospeli.csv
test/: README.md  prototyping.ipynb  test_grouper_ms.py  test_main.py
test/compare_versions/: compare_versions.ipynb  compare_versions.py  main.py  run_with_config.py
test/data/: example_data_10.csv  example_data_10_v2025_1.csv  example_data_10_v2025_2.csv  test_data_10.csv  test_data_10_output_expected.csv  test_data_9.csv  test_data_9_output_expected.csv
test/run_with_config/: compare_versions.ipynb  run_with_config.py
