[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "OSN_Algoritmus"
version = "v2025.2"
description = "Informatívny algoritmus na zaraďovanie hospitalizačných prípadov k medicínskym službám podľa kategorizačnej vyhlášky"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MZ SR" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Institut-zdravotnych-analyz/OSN-Algoritmus-MS"
"Bug Tracker" = "https://github.com/Institut-zdravotnych-analyz/OSN-Algoritmus-MS/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/OSN_Algoritmus"]

[tool.hatch.build.targets.wheel.force-include]
"src/OSN_Algoritmus/Prilohy" = "OSN_Algoritmus/Prilohy"

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# enable flake8-bugbear ("B") and flake8-quotes ("Q")
# enable Ruff's isort rules by "I"
extend-select = ["B", "Q", "I"]

[tool.ruff.format]
# indent with spaces, rather than tabs
indent-style = "space"

# respect magic trailing commas
skip-magic-trailing-comma = false

# automatically detect the appropriate line ending
line-ending = "auto"

[dependency-groups]
dev = ["pytest>=8.3.5", "pandas>=2.2.3", "ipykernel>=6.29.5"]
