[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osn_algoritmus"
version = "v2025.2"
description = "Informatívny algoritmus na zaraďovanie hospitalizačných prípadov k medicínskym službám podľa kategorizačnej vyhlášky"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ministerstvo zdravotníctva Slovenskej republiky" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "tqdm>=4.67.1",
]

[project.urls]
"Homepage" = "https://github.com/Institut-zdravotnych-analyz/OSN-Algoritmus-MS"
"Bug Tracker" = "https://github.com/Institut-zdravotnych-analyz/OSN-Algoritmus-MS/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/osn_algoritmus"]

[tool.hatch.build.targets.wheel.force-include]
"src/osn_algoritmus/Prilohy" = "osn_algoritmus/Prilohy"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["G004"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str"]

[tool.ruff.lint.per-file-ignores]
"test/**/*" = ["S101", "S603", "INP001"]


[project.optional-dependencies]
dev = ["pytest>=8.3.5", "pandas>=2.2.3", "ipykernel>=6.29.5"]
